--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "^5.0.2",
     "@angular/platform-browser-dynamic": "^5.0.2",
     "@angular/router": "^5.0.2",
+    "angularfire2": "^5.0.0-rc.4",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.5.1",
+    "firebase": "^4.7.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.18"
   },
