--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # enviroment info
-src/enviroments/**
+src/environments/firebase.ts
 
 # compiled output
 /dist
